# shed

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  dev-docker.sh  dev-podman.sh  dev.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  egress.rs  error.rs  lib.rs  main.rs  media_player.rs  media_probe.rs  program.rs  source_normalizer.rs  srt.rs  state.rs
crates/api/src/routes/: assets.rs  audio.rs  auth.rs  broadcast.rs  delay.rs  destinations.rs  guests.rs  keys.rs  mod.rs  output.rs  overlays.rs  preview.rs  recording.rs  scenes.rs  setup.rs  sources.rs  status.rs  stingers.rs  stream.rs  switching.rs  ws.rs
crates/api/src/rtmp/: flv.rs  mod.rs  server.rs
crates/api/tests/: api_tests.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  events.rs  lib.rs  types.rs
crates/processor/: Cargo.toml
crates/processor/src/: controller.rs  gst_pipeline.rs  lib.rs  stub.rs
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  unraid-template.xml
migrations/: 001_initial.sql  002_phase2.sql  003_phase3.sql  004_auth.sql  005_assets.sql
web/: package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/components/: DestinationCard.svelte  GoLiveButton.svelte  OfflineState.svelte  PopoutButton.svelte  SourceCard.svelte  StatCard.svelte  StatusIndicator.svelte  VideoPreview.svelte
web/src/lib/: api.ts  popout.ts  stores.ts  types.ts  utils.ts  ws.ts
web/src/lib/stores/: pipeline.ts
web/src/routes/: +layout.svelte  +layout.ts
web/src/routes/(app)/: +layout.svelte  +page.svelte
web/src/routes/(app)/dashboard/: +page.svelte
web/src/routes/(app)/delay/: +page.svelte
web/src/routes/(app)/destinations/: +page.svelte
web/src/routes/(app)/overlays/: +page.svelte
web/src/routes/(app)/scenes/: +page.svelte
web/src/routes/(app)/settings/: +page.svelte
web/src/routes/(app)/sources/: +page.svelte
web/src/routes/popout/: +layout.svelte
web/src/routes/popout/audio/: +page.svelte
(+14 files in other folders)
