[package]
name = "muxshed-api"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
muxshed-common = { path = "../common" }
muxshed-processor = { path = "../processor" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
bcrypt = "0.17"
rml_rtmp = "0.8"
bytes = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
